devops/kustomize/overlays/distroless/blogomatic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogomatic
spec:
  tls:
  - hosts:
    - blogomatic-test-distroless.codepraxis.dev
    secretName: wildcard-cert-route53-tls
  rules:
    - host: blogomatic-test-distroless.codepraxis.dev
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: blogomatic
              port:
                number: 80
